Add Jwt to the Project
Jwt: Adjustments in Program.cs

Add Jwt to the appsettings.json

Jwt: Adjustments in the AuthController

--- a/RoomBooking.Web/appsettings.json
+++ b/RoomBooking.Web/appsettings.json
@@ -1,6 +1,12 @@
 {"ConnectionStrings": {
   "DefaultConnection": ""
 },
+  "Jwt": {
+    "Key": "HIER_MUSS_EIN_KEY_MIT_MEHR_ALS_32_ZEICHEN_EINGEFUEGT_WERDEN",
+    "Issuer": "RoomBooking",
+    "Audience": "RoomBookingClient",
+    "ExpiresInMinutes": 60
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
