--- a/RoomBooking.Infrastructure/RoomBooking.Infrastructure.csproj
+++ b/RoomBooking.Infrastructure/RoomBooking.Infrastructure.csproj
@@ -92,4 +92,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
