Moving LoginDto and RegisterDto to WebLayer
Adjustments in AuthService in the InfrastructureLayer

Adjustments in IAuthService in ApplicationLayer

Adjustments in AuthController in WebLayer

--- a/RoomBooking.Application/RoomBooking.Application.csproj
+++ b/RoomBooking.Application/RoomBooking.Application.csproj
@@ -84,4 +84,8 @@
       <ProjectReference Include="..\RoomBooking.Domain\RoomBooking.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Dtos\" />
+    </ItemGroup>
+
 </Project>
