--- a/RoomBooking.Frontend/package.json
+++ b/RoomBooking.Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/resource-timegrid": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
