Add RegisterPage and LoginPage to RoomBooking.Frontend
Adjustments in DateNavigator Component

Add weekly view

--- a/RoomBooking.Frontend/package.json
+++ b/RoomBooking.Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.9",
@@ -20,10 +21,14 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.21.0",
+    "@mui/x-date-pickers-pro": "^8.21.0",
     "@radix-ui/react-slot": "^1.2.4",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
