Add Dockerfile in RoomBooking.Web
Add docker-compose.yml in Root

--- a/RoomBooking.Web/appsettings.json
+++ b/RoomBooking.Web/appsettings.json
@@ -1,17 +1,21 @@
-{"ConnectionStrings": {
-  "DefaultConnection": ""
-},
+{
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+
   "Jwt": {
-    "Key": "HIER_MUSS_EIN_KEY_MIT_MEHR_ALS_32_ZEICHEN_EINGEFUEGT_WERDEN",
+    "Key": "",
     "Issuer": "RoomBooking",
     "Audience": "RoomBookingClient",
-    "ExpiresInMinutes": 60
-  },  
+    "ExpiresMinutes": 60
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
